--- a/portfolio.html
+++ b/portfolio.html
@@ -1,140 +1,138 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
-        <link rel="stylesheet" href="./css/portfolo.css">
-        <link rel="stylesheet" href="link rel"preconnect href="https://fonts.googleapis.com">
-        <link rel="reconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/portfolo.css">
+    <link rel="stylesheet" href="link rel"preconnect href="https://fonts.googleapis.com">
+    <link rel="reconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    </head>
-    <body class="page">
-        <body class="page link">
-            <header class="header">
-                <div class="container header-container">
-                <nav class="header-novigation ">
-                    <a href="WebStudio" class="logo list link">
-                        <span class="logo-item link">Web</span>
-                    <span class="logo-righr link">Studio</span>
-                    </a>
-                        <ul class="site-nav current list">
-                            <li class="nav-item">
-                                <a href="Студия" class="link-current link list">Студия</a></li>
-                            <li class="nav-item">
-                                <a href="./portfolio.html" class="link-current link list">Портфолио</a></li>
-                            <li class="nav-item">
-                                <a href="Контакты" class="link-current link list">Контакты</a></li>
-                        </ul>
-                    </nav>
-                        <ul class="auth-nav list">
-                            <li class="header-link link"><a class="auth-nav-text link" href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
-                            <li class="header-link link"><a class="auth-nav-text link" href="tel:380961111111">+38096 111 11 11</a></li>
-                        </ul>
-                    </div>                    
-                </header>
-                <!------------------Кнопки------------------>
-        <main class="main-button">
-            <section class="button link list">
-                <div class="container">
-                <ul class="item">
-                    <li class="button-item-list list">
-                        <button class="buton-text-item link">Все</button>
-                    </li>
-                    <li class="button-item list">
-                        <button class="buton-text link">Веб-сайты</button>
-                    </li>
-                    <li class="button-item list">
-                        <button class="buton-text link">Приложения</button>
-                    </li>
-                    <li class="button-item list">
-                        <button class="buton-text link">Дизайн</button>
-                    </li>
-                    <li class="button-item list">
-                        <button class="buton-text link">Маркетинг</button>
-                    </li>
+</head>
+<body class="page">
+    <body class="page link">
+        <header class="header">
+            <div class="container header-container">
+            <nav class="header-novigation ">
+                <a href="WebStudio" class="logo list link">
+                    <span class="logo-item link">Web</span>
+                <span class="logo-righr link">Studio</span>
+                </a>
+                <ul class="site-nav current list">
+                    <li class="nav-item">
+                        <a href="Студия" class="link-current link list">Студия</a></li>
+                    <li class="nav-item">
+                        <a href="./portfolio.html" class="link-current link list">Портфолио</a></li>
+                    <li class="nav-item">
+                        <a href="Контакты" class="link-current link list">Контакты</a></li>
                 </ul>
-                </div>
-            </section>
-            <!--------------------Портфолио---------->
-            <section class="gallery link list"> 
-                <div class="container">          
-                <ul class="gallery-item link link">
-                    <li class="gallery-list list">
-                        <img src="./img2/img1.jpg" alt="3 человека" width="370">
-                        <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Технокряк</h3>
-                        <P class="gallery-text-item link">Веб-сайт</P></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img2.jpg" alt="баскет" width="370">
-                        <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Постер New Orlean vs Golden Star</h3>
-                        <p class="gallery-text-item link">Дизайн</p></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img3.jpg" alt="Акула" width="370">
-                         <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Ресторан Seafood</h3>
-                        <p class="gallery-text-item link">Приложение</p></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img4.jpg" alt="Наушники" width="370">
-                         <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Проект Prime</h3>
-                        <p class="gallery-text-item link">Маркетинг</p></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img5.jpg" alt="2 коробки" width="370">
-                        <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Проект Boxes</h3>
-                        <p class="gallery-text-item link">Приложение</p></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img6.jpg" alt="монитор" width="370">
-                        <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Inspiration has no Borders</h3>
-                        <p class="gallery-text-item link">Веб-сайт</p></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img7.jpg" alt="Журнал" width="370">
-                        <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Издание Limited Edition</h3>
-                        <p class="gallery-text-item link">Дизайн</p></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img8.jpg" alt="Подвеска" width="370">
-                        <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Проект LAB</h3>
-                        <p class="gallery-text-item link">Маркетинг</p></div>
-                    </li>
-                    <li class="gallery-list list">
-                        <img src="./img2/img9.jpg" alt="Ноутбук" width="370">
-                        <div class="masters-item-bottom">
-                        <h3 class="gallery-text link">Growing Business</h3>
-                        <p class="gallery-text-item link">Приложение</p></div>
-                    </li>
+            </nav>
+                <ul class="auth-nav list">
+                    <li class="header-link link"><a class="auth-nav-text link" href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
+                    <li class="header-link link"><a class="auth-nav-text link" href="tel:380961111111">+38096 111 11 11</a></li>
                 </ul>
+            </div>                    
+        </header>
+            <!------------------Кнопки------------------>
+    <main class="main-button">
+        <section class="button link list">
+            <div class="container">
+            <ul class="item">
+                <li class="button-item-list list">
+                    <button class="buton-text-item link">Все</button>
+                </li>
+                <li class="button-item list">
+                    <button class="buton-text link">Веб-сайты</button>
+                </li>
+                <li class="button-item list">
+                    <button class="buton-text link">Приложения</button>
+                </li>
+                <li class="button-item list">
+                    <button class="buton-text link">Дизайн</button>
+                </li>
+                <li class="button-item list">
+                    <button class="buton-text link">Маркетинг</button>
+                </li>
+            </ul>
             </div>
-        </section>
-    </main>
-        <section>
-            <footer class="contacts-title link">
-                    <div class="container">
-                    <span class="contacts-list-item link">Web</span>
-                    <span class="contacts-list-right link">Studio</span>
-                <address class="contacts-address list">
-                <ul class="contacts-list link list">
-                    <li class="contacts-item-list link">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li class="contacts-item-list link"> <a class="contacts-link link" href="mailto:info@example.com">info@example.com</a></li>
-                    <li class="contacts-item-list link"> <a class="contacts-link link" href="tel:+380991111111">+38 099 111 11 11</a></li>
-                </ul>
-                </div>
-        </section>
-        </footer>
-    </body>
-    </html>
+        <!--------------------Портфолио---------->
+            <div class="container gallery link list">          
+            <ul class="gallery-item link link">
+                <li class="gallery-list list">
+                    <img src="./img2/img1.jpg" alt="3 человека" width="370">
+                    <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Технокряк</h3>
+                    <P class="gallery-text-item link">Веб-сайт</P></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img2.jpg" alt="баскет" width="370">
+                    <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Постер New Orlean vs Golden Star</h3>
+                    <p class="gallery-text-item link">Дизайн</p></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img3.jpg" alt="Акула" width="370">
+                     <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Ресторан Seafood</h3>
+                    <p class="gallery-text-item link">Приложение</p></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img4.jpg" alt="Наушники" width="370">
+                     <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Проект Prime</h3>
+                    <p class="gallery-text-item link">Маркетинг</p></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img5.jpg" alt="2 коробки" width="370">
+                    <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Проект Boxes</h3>
+                    <p class="gallery-text-item link">Приложение</p></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img6.jpg" alt="монитор" width="370">
+                    <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Inspiration has no Borders</h3>
+                    <p class="gallery-text-item link">Веб-сайт</p></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img7.jpg" alt="Журнал" width="370">
+                    <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Издание Limited Edition</h3>
+                    <p class="gallery-text-item link">Дизайн</p></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img8.jpg" alt="Подвеска" width="370">
+                    <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Проект LAB</h3>
+                    <p class="gallery-text-item link">Маркетинг</p></div>
+                </li>
+                <li class="gallery-list list">
+                    <img src="./img2/img9.jpg" alt="Ноутбук" width="370">
+                    <div class="masters-item-bottom">
+                    <h3 class="gallery-text link">Growing Business</h3>
+                    <p class="gallery-text-item link">Приложение</p></div>
+                </li>
+            </ul>
+        </div>
+    </section>
+</main>
+    <section>
+        <footer class="contacts-title link">
+                <div class="container">
+                <span class="contacts-list-item link">Web</span>
+                <span class="contacts-list-right link">Studio</span>
+            <address class="contacts-address list">
+            <ul class="contacts-list link list">
+                <li class="contacts-item-list link">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li class="contacts-item-list link"> <a class="contacts-link link" href="mailto:info@example.com">info@example.com</a></li>
+                <li class="contacts-item-list link"> <a class="contacts-link link" href="tel:+380991111111">+38 099 111 11 11</a></li>
+            </ul>
+            </div>
+    </section>
+    </footer>
+</body>
+</html>
