--- a/portfolio.html
+++ b/portfolio.html
@@ -122,7 +122,8 @@
 </main>
     <section>
         <footer class="contacts-title link">
-                <div class="container">
+            <div class="foot-flex">
+                <div class="container" >
                 <span class="contacts-list-item link">Web</span>
                 <span class="contacts-list-right link">Studio</span>
             <address class="contacts-address list">
@@ -131,6 +132,39 @@
                 <li class="contacts-item-list link"> <a class="contacts-link link" href="mailto:info@example.com">info@example.com</a></li>
                 <li class="contacts-item-list link"> <a class="contacts-link link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
+            </div>
+            <div class="footer-social">
+                <h2 class="social-title">Присоединяйтесь</h2>
+                <ul class="social-list list">
+                    <li class="social-item">
+                        <a href="" class="footer-link">
+                        <svg class="ooter-icon">
+                            <use href="./symbol2-defs.svg#icon-Ellipse1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="footer-link">
+                        <svg class="ooter-icon">
+                            <use href="./symbol2-defs.svg#icon-twitter1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="footer-link">
+                        <svg class="ooter-icon">
+                            <use href="./symbol2-defs.svg#icon-facebook1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="social-item">
+                        <a href="" class="footer-link">
+                        <svg class="ooter-icon">
+                            <use href="./symbol2-defs.svg#icon-linkedin1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                </ul>
             </div>
     </section>
     </footer>
