--- a/portfolio.html
+++ b/portfolio.html
@@ -65,56 +65,56 @@
                 <li class="gallery-list list">
                     <img src="./img2/img1.jpg" alt="3 человека" width="370">
                     <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Технокряк</h3>
-                    <P class="gallery-text-item link">Веб-сайт</P></div>
+                    <h3 class="gallery-text">Технокряк</h3>
+                    <P class="gallery-text-item">Веб-сайт</P></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img2.jpg" alt="баскет" width="370">
                     <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Постер New Orlean vs Golden Star</h3>
-                    <p class="gallery-text-item link">Дизайн</p></div>
+                    <h3 class="gallery-text">Постер New Orlean vs Golden Star</h3>
+                    <p class="gallery-text-item">Дизайн</p></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img3.jpg" alt="Акула" width="370">
                      <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Ресторан Seafood</h3>
-                    <p class="gallery-text-item link">Приложение</p></div>
+                    <h3 class="gallery-text">Ресторан Seafood</h3>
+                    <p class="gallery-text-item">Приложение</p></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img4.jpg" alt="Наушники" width="370">
                      <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Проект Prime</h3>
-                    <p class="gallery-text-item link">Маркетинг</p></div>
+                    <h3 class="gallery-text">Проект Prime</h3>
+                    <p class="gallery-text-item">Маркетинг</p></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img5.jpg" alt="2 коробки" width="370">
                     <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Проект Boxes</h3>
-                    <p class="gallery-text-item link">Приложение</p></div>
+                    <h3 class="gallery-text">Проект Boxes</h3>
+                    <p class="gallery-text-item">Приложение</p></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img6.jpg" alt="монитор" width="370">
                     <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Inspiration has no Borders</h3>
-                    <p class="gallery-text-item link">Веб-сайт</p></div>
+                    <h3 class="gallery-text">Inspiration has no Borders</h3>
+                    <p class="gallery-text-item">Веб-сайт</p></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img7.jpg" alt="Журнал" width="370">
                     <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Издание Limited Edition</h3>
-                    <p class="gallery-text-item link">Дизайн</p></div>
+                    <h3 class="gallery-text">Издание Limited Edition</h3>
+                    <p class="gallery-text-item">Дизайн</p></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img8.jpg" alt="Подвеска" width="370">
                     <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Проект LAB</h3>
-                    <p class="gallery-text-item link">Маркетинг</p></div>
+                    <h3 class="gallery-text">Проект LAB</h3>
+                    <p class="gallery-text-item">Маркетинг</p></div>
                 </li>
                 <li class="gallery-list list">
                     <img src="./img2/img9.jpg" alt="Ноутбук" width="370">
                     <div class="masters-item-bottom">
-                    <h3 class="gallery-text link">Growing Business</h3>
-                    <p class="gallery-text-item link">Приложение</p></div>
+                    <h3 class="gallery-text">Growing Business</h3>
+                    <p class="gallery-text-item">Приложение</p></div>
                 </li>
             </ul>
         </div>
