--- a/portfolio.html
+++ b/portfolio.html
@@ -31,10 +31,20 @@
                         <a href="Контакты" class="link-current link list">Контакты</a></li>
                 </ul>
             </nav>
-                <ul class="auth-nav list">
-                    <li class="header-link link"><a class="auth-nav-text link" href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
-                    <li class="header-link link"><a class="auth-nav-text link" href="tel:380961111111">+38096 111 11 11</a></li>
-                </ul>
+            <ul class="auth-nav list">
+            <li class="header-link link">
+                <a class="auth-nav-text link" href="mailto:nfo@devstudio.com">info@devstudio.com
+                <svg class="contacts-item-icon">
+                    <use href="./symbol-defs3.svg#icon-envelope"></use>
+                </svg>
+            </a>
+        </li>
+            <li class="header-link link"><a class="auth-nav-text link" href="tel:380961111111">+38096 111 11 11
+                <svg class="contacts-item-icon">
+                    <use href="./symbol-defs3.svg#icon-Vector"></use>
+                </svg>
+            </a></li>
+        </ul>
             </div>                    
         </header>
             <!------------------Кнопки------------------>
@@ -43,13 +53,13 @@
             <div class="container">
             <ul class="item">
                 <li class="button-item-list list">
-                    <button class="buton-text-item link">Все</button>
+                    <button class="buton-text link">Все</button>
                 </li>
                 <li class="button-item list">
-                    <button class="buton-text link">Веб-сайты</button>
+                    <button class="buton-text link" class="text-button">Веб-сайты</button>
                 </li>
                 <li class="button-item list">
-                    <button class="buton-text link">Приложения</button>
+                    <button class="buton-text link" >Приложения</button>
                 </li>
                 <li class="button-item list">
                     <button class="buton-text link">Дизайн</button>
@@ -63,58 +73,76 @@
             <div class="container gallery link list">          
             <ul class="gallery-item link link">
                 <li class="gallery-list list">
+                    <a href="" class="click link">
                     <img src="./img2/img1.jpg" alt="3 человека" width="370">
                     <div class="masters-item-bottom">
                     <h3 class="gallery-text">Технокряк</h3>
                     <P class="gallery-text-item">Веб-сайт</P></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img2.jpg" alt="баскет" width="370">
                     <div class="masters-item-bottom">
                     <h3 class="gallery-text">Постер New Orlean vs Golden Star</h3>
                     <p class="gallery-text-item">Дизайн</p></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img3.jpg" alt="Акула" width="370">
                      <div class="masters-item-bottom">
                     <h3 class="gallery-text">Ресторан Seafood</h3>
                     <p class="gallery-text-item">Приложение</p></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img4.jpg" alt="Наушники" width="370">
                      <div class="masters-item-bottom">
                     <h3 class="gallery-text">Проект Prime</h3>
                     <p class="gallery-text-item">Маркетинг</p></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img5.jpg" alt="2 коробки" width="370">
                     <div class="masters-item-bottom">
                     <h3 class="gallery-text">Проект Boxes</h3>
                     <p class="gallery-text-item">Приложение</p></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img6.jpg" alt="монитор" width="370">
                     <div class="masters-item-bottom">
                     <h3 class="gallery-text">Inspiration has no Borders</h3>
                     <p class="gallery-text-item">Веб-сайт</p></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img7.jpg" alt="Журнал" width="370">
                     <div class="masters-item-bottom">
                     <h3 class="gallery-text">Издание Limited Edition</h3>
                     <p class="gallery-text-item">Дизайн</p></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img8.jpg" alt="Подвеска" width="370">
                     <div class="masters-item-bottom">
                     <h3 class="gallery-text">Проект LAB</h3>
                     <p class="gallery-text-item">Маркетинг</p></div>
+                </a>
                 </li>
                 <li class="gallery-list list">
+                    <a href="" class="link">
                     <img src="./img2/img9.jpg" alt="Ноутбук" width="370">
                     <div class="masters-item-bottom">
                     <h3 class="gallery-text">Growing Business</h3>
                     <p class="gallery-text-item">Приложение</p></div>
+                </a>
                 </li>
             </ul>
         </div>
