--- a/index.html
+++ b/index.html
@@ -29,8 +29,18 @@
                         </ul>
                     </nav>
                         <ul class="auth-nav list">
-                            <li class="header-link link"><a class="auth-nav-text link" href="mailto:nfo@devstudio.com">info@devstudio.com</a></li>
-                            <li class="header-link link"><a class="auth-nav-text link" href="tel:380961111111">+38096 111 11 11</a></li>
+                            <li class="header-link link">
+                                <a class="auth-nav-text link" href="mailto:nfo@devstudio.com">info@devstudio.com
+                                <svg class="contacts-item-icon">
+                                    <use href="./symbol-defs3.svg#icon-envelope"></use>
+                                </svg>
+                            </a>
+                        </li>
+                            <li class="header-link link"><a class="auth-nav-text link" href="tel:380961111111">+38096 111 11 11
+                                <svg class="contacts-item-icon">
+                                    <use href="./symbol-defs3.svg#icon-Vector"></use>
+                                </svg>
+                            </a></li>
                         </ul>
                     </div>                    
                 </header>
@@ -38,7 +48,7 @@
                     <!-- герой -->
                     <section class="hero list">
                     <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                    <button class="button hero-btn" type="button">ЗаказатьУслугу</button>
+                    <button class="button hero-btn" type="button">Заказать услугу</button>
                     </section>
             
                 <!-- Преимущества -->
@@ -109,7 +119,7 @@
                                     <li class="social-item">
                                         <a href="" class="social-link">
                                             <svg class="social-icon">
-                                                <use href="./symbol2-defs.svg#icon-Ellipse1">
+                                                <use href="./symbol-defs3.svg#icon-instagram">
                                             </svg>
                                         </a>
                                     </li>
@@ -146,7 +156,7 @@
                                     <li class="social-item">
                                         <a href="" class="social-link">
                                             <svg class="social-icon">
-                                                <use href="./symbol2-defs.svg#icon-Ellipse1"></use>
+                                                <use href="./symbol-defs3.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -183,7 +193,7 @@
                                     <li class="social-item">
                                         <a href="" class="social-link">
                                             <svg class="social-icon">
-                                                <use href="./symbol2-defs.svg#icon-Ellipse1"></use>
+                                                <use href="./symbol-defs3.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -221,7 +231,7 @@
                                     <li class="social-item">
                                         <a href="" class="social-link">
                                             <svg class="social-icon">
-                                                <use href="./symbol2-defs.svg#icon-Ellipse1"></use>
+                                                <use href="./symbol-defs3.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -293,7 +303,7 @@
                             <li class="clients-item">
                                 <a href="" class="clients-link">
                                     <svg class="clients">
-                                        <use href="./symbol2-defs.svg#icon-Logo1"></use>
+                                        <use href="./symbol-defs3.svg#icon-group"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -304,6 +314,7 @@
                 <section>
                     <footer class="contacts-title link">
                             <div class="container">
+                            <div class="footer-adress">
                             <span class="contacts-list-item link">Web</span>
                             <span class="contacts-list-right link">Studio</span>
                         <address class="contacts-address list">
@@ -312,6 +323,41 @@
                             <li class="contacts-item-list link"> <a class="contacts-link link" href="mailto:info@example.com">info@example.com</a></li>
                             <li class="contacts-item-list link"> <a class="contacts-link link" href="tel:+380991111111">+38 099 111 11 11</a></li>
                         </ul>
+                        </address>
+                        </div>
+                        <div class="footer-social">
+                            <h3 class="social-title">присоединяйтесь</h3>
+                            <ul class="social-list online">
+                                <li class="social-item">
+                                    <a href class="social-link">
+                                        <svg class="social-icon">
+                                            <use href=""></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href class="social-link">
+                                        <svg class="social-icon">
+                                            <use href=""></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href class="social-link">
+                                        <svg class="social-icon">
+                                            <use href=""></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                                <li class="social-item">
+                                    <a href class="social-link">
+                                        <svg class="social-icon">
+                                            <use href=""></use>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                         </div>
                 </section>
                 </footer>
